<resources>
    <string name="app_name">Submission-Dicoding_fundamental-awal</string>
    <string name="masukan_kata">Masukan Username</string>
    <string name="search_activity">Search Activity</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="login">Username</string>
    <string name="following">Following</string>

    <plurals name="follower_plural">
        <item quantity="one">%d <b>Follower</b></item>
        <item quantity="other">%d <b>Followers</b></item>
    </plurals>

    <plurals name="following_plural">
        <item quantity="one">%d <b>Following</b></item>
        <item quantity="other">%d <b>Following</b></item>
    </plurals>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="data_kosong">Data kosong</string>
    <string name="todo">TODO</string>
    <string name="menu_1">menu_1</string>
    <string name="menu_2">menu_2</string>
    <string name="home">Home</string>
    <string name="favorited_user">Favorited User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="github_lite_submission">Github Lite-Submission</string>

</resources>